--- a/app.json
+++ b/app.json
@@ -1,30 +1,37 @@
 {
   "expo": {
-    "name": "BGApp",
-    "slug": "BGApp",
+    "name": "Belleza Global",
+    "slug": "belleza-global",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
+
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "ios": {
-      "supportsTablet": true
-    },
+
     "android": {
+      "package": "com.andreyblanco.bellezaglobal",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
+
+    "ios": {
+      "supportsTablet": true
+    },
+
     "web": {
       "favicon": "./assets/favicon.png"
     },
+
     "plugins": [
       "expo-sqlite",
       "@react-native-community/datetimepicker"
