--- a/app.json
+++ b/app.json
@@ -7,13 +7,11 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": false,
-
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-
     "android": {
       "package": "com.andreyblanco.bellezaglobal",
       "versionCode": 1,
@@ -23,18 +21,21 @@
       },
       "edgeToEdgeEnabled": true
     },
-
     "ios": {
       "supportsTablet": true
     },
-
     "web": {
       "favicon": "./assets/favicon.png"
     },
-
     "plugins": [
       "expo-sqlite",
       "@react-native-community/datetimepicker"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "7d597ca9-265a-4bf9-a7a4-09bdfa0f2c6a"
+      }
+    },
+    "owner": "andreyblanco"
   }
 }
