--- a/app.json
+++ b/app.json
@@ -10,14 +10,14 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#5D60A8"
     },
     "android": {
       "package": "com.andreyblanco.bellezaglobal",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#5D60A8"
       },
       "edgeToEdgeEnabled": true
     },
