--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@react-native-picker/picker": "2.11.1",
     "expo": "~54.0.31",
     "expo-contacts": "~15.0.11",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
